--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.0.0",
-    "ionic": "3.7.0",
+    "ionic": "^3.19.0",
     "typescript": "2.3.3"
   },
   "description": "An Ionic project",
